[gd_scene load_steps=9 format=3 uid="uid://wwb5dl8plh4v"]

[ext_resource type="Script" path="res://Scripts/game.gd" id="1_pv0v3"]
[ext_resource type="PackedScene" uid="uid://c3hpavbfwam7" path="res://Prefabs/player.tscn" id="2_7iamt"]
[ext_resource type="PackedScene" uid="uid://v7qctv8pjko6" path="res://Prefabs/tile_map.tscn" id="2_rrcn6"]
[ext_resource type="Texture2D" uid="uid://d2sy3vjrbk4gj" path="res://Unzipped Assets/Pixel Caves _ 2D Environments _ Unity Asset Store.jpg" id="3_a181u"]
[ext_resource type="Script" path="res://Scripts/enemy_timer.gd" id="6_1bd04"]
[ext_resource type="Theme" uid="uid://dys1jqy51wkyw" path="res://Prefabs/new_theme.tres" id="6_ndj8f"]
[ext_resource type="FontFile" uid="uid://c6iqh5dfh3512" path="res://Unzipped Assets/NotJamGlasgow13/Not Jam Glasgow 13.ttf" id="7_xbh5r"]
[ext_resource type="AudioStream" uid="uid://8ywrswqc6yuj" path="res://Unzipped Assets/Undertale OST - 059 Spider Dance.mp3" id="8_rl10t"]

[node name="Game" type="Node2D"]
script = ExtResource("1_pv0v3")

[node name="Player" parent="." instance=ExtResource("2_7iamt")]
position = Vector2(728, 624)

[node name="TileMap" parent="." instance=ExtResource("2_rrcn6")]
layer_0/tile_data = PackedInt32Array(-65536, 4, 1, -65535, 4, 1, -65534, 4, 1, -65533, 4, 1, -65532, 4, 1, -65531, 4, 1, -65530, 4, 1, -65529, 4, 1, -65528, 4, 1, -65527, 4, 1, -65526, 4, 1, -65525, 4, 1, -65524, 4, 1, -65523, 4, 1, -65522, 4, 1, -65521, 4, 1, -65520, 4, 1, -65519, 4, 1, -65518, 4, 1, -65517, 4, 1, -65516, 4, 1, -65515, 4, 1, -65514, 4, 1, -65513, 4, 1, 65535, 131076, 0, 131071, 131076, 0, 196607, 131076, 0, 262143, 131076, 0, 327679, 131076, 0, 393215, 131076, 0, 458751, 131076, 0, 524287, 4, 5, 589823, 131076, 0, 655359, 131076, 0, 720895, 131076, 0, 24, 65536, 4, 65560, 65536, 4, 131096, 65536, 4, 196632, 65536, 4, 262168, 65536, 4, 327704, 65536, 4, 393240, 65536, 4, 458776, 65536, 4, 524312, 65536, 4, 589848, 65536, 4, 655384, 65536, 4, 720897, 262148, 3, 720896, 262148, 3, 720898, 262148, 3, 720899, 262148, 3, 720900, 262148, 3, 720901, 262148, 3, 720902, 262148, 3, 720903, 262148, 3, 720904, 262148, 3, 720905, 262148, 3, 720906, 262148, 3, 720907, 262148, 3, 720908, 262148, 3, 720909, 262148, 3, 720910, 262148, 3, 720911, 262148, 3, 720912, 262148, 3, 720913, 262148, 3, 720914, 262148, 3, 720915, 262148, 3, 720916, 262148, 3, 720917, 262148, 3, 720918, 262148, 3, 720919, 262148, 3, 720920, 327684, 0, 786431, 65540, 4, -1, 65540, 0, -65512, 65540, 1, 458752, 262148, 3, 458753, 262148, 3, 458754, 262148, 3, 458755, 262148, 3, 458756, 196612, 2, 262153, 196612, 3, 262154, 262148, 3, 262155, 262148, 3, 983061, 262148, 3, 262156, 262148, 3, 262157, 196612, 2)

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(872.5, 424)
scale = Vector2(2.38995, 2.24155)
texture = ExtResource("3_a181u")

[node name="enemy_timer" type="Timer" parent="."]
wait_time = 4.0
autostart = true
script = ExtResource("6_1bd04")

[node name="ScoreTimer" type="Timer" parent="."]
autostart = true

[node name="GameUi" type="Control" parent="."]
custom_minimum_size = Vector2(1152, 100)
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 100.0
theme = ExtResource("6_ndj8f")

[node name="ScoreLabel" type="Label" parent="GameUi"]
layout_mode = 0
offset_left = 632.0
offset_top = 8.0
offset_right = 1039.0
offset_bottom = 60.0
theme_override_fonts/font = ExtResource("7_xbh5r")
text = "SCCORE : 0000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_rl10t")
autoplay = true

[node name="RampUpTimer" type="Timer" parent="."]
wait_time = 7.0
one_shot = true
autostart = true

[node name="RampUpTimer2" type="Timer" parent="."]
wait_time = 15.0
autostart = true

[node name="LowArrowTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="HealTimer" type="Timer" parent="."]
wait_time = 31.0
autostart = true

[node name="DevSkip" type="Button" parent="."]
offset_left = 704.0
offset_top = 464.0
offset_right = 1000.0
offset_bottom = 584.0
text = "Arena Level 2
"

[node name="HealthRamp" type="Timer" parent="."]
wait_time = 31.0
autostart = true

[node name="UnRamp" type="Timer" parent="."]
wait_time = 35.0
autostart = true

[node name="DevSkip1" type="Button" parent="."]
offset_left = 744.0
offset_top = 352.0
offset_right = 928.0
offset_bottom = 472.0
text = "Arena
"

[connection signal="timeout" from="enemy_timer" to="." method="_on_enemy_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="RampUpTimer" to="enemy_timer" method="_on_ramp_up_timer_timeout"]
[connection signal="timeout" from="RampUpTimer2" to="enemy_timer" method="_on_ramp_up_timer_2_timeout"]
[connection signal="timeout" from="LowArrowTimer" to="." method="_on_low_arrow_timer_timeout"]
[connection signal="timeout" from="HealTimer" to="." method="_on_heal_timer_timeout"]
[connection signal="pressed" from="DevSkip" to="." method="_on_dev_skip_pressed"]
[connection signal="timeout" from="HealthRamp" to="enemy_timer" method="_on_health_ramp_timeout"]
[connection signal="timeout" from="UnRamp" to="enemy_timer" method="_on_un_ramp_timeout"]
[connection signal="pressed" from="DevSkip1" to="." method="_on_dev_skip_1_pressed"]
